upgraded phpunit to v7.5.0 (#762)
| Q             | A
| ------------- | ---
| Branch?       | master
| Bug fix?      | yes
| New feature?  | yes
| BC breaks?    | no
| Deprecations? | no
| Fixed tickets | -
| License       | MIT
| Doc PR        | -

fixed Fix subsequent reads from php://input in ServerRequestBuilder
added new streams
added allowing for ralouphie/getallheaders v3.0

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "psr/log-implementation": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.2.0",
+        "mockery/mockery": "^1.2.0",
+        "narrowspark/testing-helper": "^7.0.0",
+        "phpunit/phpunit": "^7.5.0",
         "symfony/var-dumper": "^4.2.0",
         "viserio/console": "self.version",
         "viserio/events": "self.version"
