feat : adding test for phpstan bridge (#786)
* feat : adding test for phpstan bridge

* feat : adding more test for phpstan bridge
feat : changed phpstan workflow

* fix : fixed paths in phpstan.nenon

* feat : moved code-coverage

* feat : added travis for codecov

* build : name changed

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -20,7 +20,7 @@ parameters:
 
     excludes_analyse:
         - vendor/
-        - src/Viserio/Bridge/Monolog/Tests/Fixture/
+        - Tests/Fixture/
 
     ignoreErrors:
         - '#Parameter \#1 \$casters of method Symfony\\Component\\VarDumper\\Cloner\\AbstractCloner::addCasters\(\) expects array\<callable\>\, array\<string\, array\<int, object|string\>\> given#'
