--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "log",
         "bridge"
     ],
-    "homepage": "http://github.com/narrowspark/framework",
+    "homepage": "https://github.com/narrowspark/framework",
     "license": "MIT",
     "authors": [
         {
